hphp/hack/test/typecheck/lambda/lambda_contextual/lambda_bad_as_shape_argument.php.like_types.exp
File "lambda_bad_as_shape_argument.php", line 27, characters 10-16:
Invalid return type (Typing[4110])
File "lambda_bad_as_shape_argument.php", line 26, characters 4-27:
Expected MyClosureRunner<~MyClass>
File "lambda_bad_as_shape_argument.php", line 23, characters 12-35:
But got dynamic because it is an unenforceable type
File "lambda_bad_as_shape_argument.php", line 31, characters 5-169:
Invalid argument (Typing[4110])
File "lambda_bad_as_shape_argument.php", line 22, characters 3-65:
Expected ~shape('a' => ~MyClosureRunner<~MyClass>, 'b' => ~int) because it is an unenforceable type
File "lambda_bad_as_shape_argument.php", line 31, characters 5-169:
But got shape('a' => MyClosureRunner<dynamic>, 'b' => int)
File "lambda_bad_as_shape_argument.php", line 11, characters 61-68:
Invalid assignment (Typing[4110])
File "lambda_bad_as_shape_argument.php", line 11, characters 39-59:
Expected (function(T): string)
File "lambda_bad_as_shape_argument.php", line 11, characters 39-59:
But got dynamic because it is an unenforceable type
File "lambda_bad_as_shape_argument.php", line 18, characters 67-74:
Invalid assignment (Typing[4110])
File "lambda_bad_as_shape_argument.php", line 18, characters 39-65:
Expected (function(MyClass): string)
File "lambda_bad_as_shape_argument.php", line 18, characters 39-65:
But got dynamic because it is an unenforceable type
